# sbe-odyssey

./: .gitignore  CODING_GUIDELINES  README.md  env.bash  meson.build  meson_options.txt  readme.txt  sbe  setup.py
public/: meson.build  projectrc
public/src/: README.md  meson.build
public/src/common/: README.md  meson.build
public/src/common/algorithms/: common-base.h  commonbase.H  dilithium.C  dilithium.H  ecdsa.C  ecdsa.H  meson.build  polyvec-include.h  pqalgs.H  pqalgs.h  sha3.C  sha3.H  sha512.C  sha512.H
public/src/common/algorithms/ecdsa/: ecdsa.C  ecdsa.H  meson.build
public/src/common/algorithms/sha2/: meson.build  sha512.C  sha512.H
public/src/common/algorithms/sha3/: meson.build  sha3.C  sha3.H
public/src/common/cnfg/odyssey/: filenames.H  pk_app_cfg.h
public/src/common/core/: assert.h  cmnglobals.C  cmnglobals.H  errorcodes.H  mbxscratch.H  measurementregs.H  meson.build  odysseyfilenames.H  odysseymbxscratch.H  pk_app_cfg.h  pool.C  pool.H  poolglobaltemplate.C  sbe_sp_intf.H  sbeexeintf.H  sbeglobals.C  sbeglobals.H  sbeirq.H  sbetrace.H  threadutil.C  threadutil.H  vector
public/src/common/hwpf/: hw_access.H  meson.build  plat_handle_scom.C  plat_hw_access.H  plat_trace.H  subroutine_executor.H
public/src/common/pakwrapper/: archive_config.H  meson.build  pakwrapper.C  pakwrapper.H
public/src/common/utils/: meson.build  metadata.H  metadata_base.C  metadata_base.H  sbeutil.C  sbeutil.H  scratch.H  securityutils.C  securityutils.H  stackutils.C  stackutils.H
public/src/import/: README.md
public/src/import/public/: README
public/src/onetime/: README.md  meson.build
public/src/onetime/common/: README.md  meson.build
public/src/onetime/common/algorithms/: meson.build
public/src/onetime/common/bldr/: meson.build
public/src/onetime/common/srom/: meson.build
public/src/onetime/metis/: README.md
public/src/onetime/odyssey/: meson.build
public/src/onetime/odyssey/bldr/: meson.build
public/src/onetime/odyssey/cust/: meson.build
public/src/onetime/odyssey/otprom/: meson.build
public/src/runtime/: README.md  meson.build
public/src/runtime/common/: README.md  meson.build
public/src/runtime/common/core/: ipl.C  (+64 more)
public/src/runtime/metis/: README.md
public/src/runtime/odyssey/: README.md  meson.build
public/src/runtime/tools/: chipoptable.py
public/src/test/framework/: build-script  ci_script
public/src/tools/: README.md  meson.build
public/src/tools/debug/: ffdcparser.py  ppe2fsp  sbe-debug.py
public/src/tools/install/: buildtoolrequirements.txt  debugtoolrequirements.txt  requirements.txt
public/src/tools/simics/: poz-simics-debug-framework.py  pozmsgregparser.py  pozsbeinitstandalone.simics  sbestandaloneenv.simics
public/src/tools/trace/: fsp-trace  ppe2fsp.py  tracehash.pl  tracehashwrap.py
public/src/tools/utils/: meson.build
(+2643 files in other folders)
