#Build Platform
option('platform',type : 'combo', value : 'all', choices : ['p11', 'metis', 'odyssey', 'p11_dft', 'metis_dft', 'odyssey_dft', 'all'],
                description : 'Build Platform Type [p11,metis,odyssey]')

#Build Level/DD Level
option('ddlevel',type : 'combo', value : 'DD1', choices : ['DD1'], description : 'DD Level. Currently supporting DD1 ')

#otprom build enabled by def
option('otprom', type : 'feature', value : 'enabled', description : 'Enable/Disable otprom image build for a platform')

#srom build enabled by def
option('srom', type : 'feature', value : 'enabled', description :'Enable/Disable secure rom image build for a platform')

#bldr build enabled by def
option('bldr', type : 'feature', value : 'enabled', description :'Enable/Disable Boot Loader image for a platform')

#tsbe build enabled by def
option('tsbe', type : 'feature', value : 'enabled', description :'Enable/Disable Tap SBE runtime image build for a platform')

#hsbe build enabled by def
option('hsbe', type : 'feature', value : 'enabled', description :'Enable/Disable Hub SBE runtime image build for a platform')

#sppe build enabled by def
option('sppe', type : 'feature', value : 'enabled', description :'Enable/Disable SPPE runtime image build for a platform')

#sbe build enabled by def
option('sbe', type : 'feature', value : 'enabled', description :'Enable/Disable SBE runtime image build for a platform')

#pme build enabled by def
option('pme', type : 'feature', value : 'enabled', description :'Enable/Disable PME runtime image build for a platform')